# libsfdo

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt
common/: dirs.c  grow.c  hash.c  log.c  membuild.c  meson.build  strbuild.c  striter.c  strpool.c
examples/: basedir-dump.c  desktop-dump.c  desktop-exec.c  desktop-file-load.c  desktop-file-query.c  desktop-load.c  icon-lookup.c  meson.build
include/: api.h  desktop.h  grow.h  hash.h  icon.h  log.h  sfdo-basedir.h  sfdo-common.h  sfdo-desktop-file.h  sfdo-desktop.h  sfdo-icon.h  strbuild.h  strpool.h
include/common/: dirs.h  grow.h  hash.h  icon.h  membuild.h  path.h  size.h  striter.h
include/sfdo-desktop/: internal.h
include/sfdo-icon/: internal.h
scripts/: iconcache.py
sfdo/: grow.c  hash.c  log.c  membuild.c  meson.build  strbuild.c  striter.c  strpool.c
sfdo-basedir/: basedir.c  meson.build
sfdo-desktop/: db.c  desktop.c  entry.c  meson.build
sfdo-desktop-file/: file.c  meson.build
sfdo-icon/: cache.c  icon.c  load.c  lookup.c  meson.build  scan.c  state.c
subprojects/: inih.wrap
tests/: basedir.c  desktop-file.c  desktop.c  icon.c  meson.build
tests/desktop/basedir1/: actions.desktop  bad-action-duplicate.desktop  bad-action-no-exec.desktop  bad-boolean.desktop  bad-dbus-cont.desktop  bad-dbus-empty.desktop  bad-dbus-leader.desktop  bad-dbus-long.desktop  bad-dbus-single.desktop  bad-exec-escape.desktop  bad-exec-field-in-quoted.desktop  bad-exec-invalid-field.desktop  bad-exec-multiple-targets.desktop  bad-exec-no-closing-quote.desktop  bad-exec-path.desktop  bad-exec-reserved.desktop  bad-exec-surrounded-standalone.desktop  bad-exec-truncated-field.desktop  bad-exec-unescaped.desktop  bad-ext.txt  bad-group.desktop  bad-missing-action.desktop  bad-no-exec.desktop  bad-show-in-overlap.desktop  both-show-in.desktop  com.example.app-all.desktop  com.example.complex.desktop  com.example.dbus.desktop  dir.directory  exec-complex.desktop  exec-embed.desktop  exec-simple.desktop  hidden.desktop  link.desktop  magic  not-show-in.desktop  only-show-in.desktop  simple.desktop  unknown-type.desktop
tests/desktop/basedir1/com/example/: nested.desktop
tests/desktop/basedir2/: bad-boolean.desktop  hidden.desktop
tests/icon/basedir1/cached/: cache.txt  icon-theme.cache  index.theme
tests/icon/basedir1/cached/24x24/: README
tests/icon/basedir1/hicolor/: index.theme
tests/icon/basedir1/loop-first/: index.theme
tests/icon/basedir1/loop-second/: index.theme
